--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=1.0.0
 author=Turkish Technnology Team Foundation (T3)
 maintainer=Turkish Technnology Team Foundation (T3)
 sentence=Arduino examples for Deneyap Development Boards
-paragraph=Arduino examples for Deneyap Development Boards.
-category=Other
-url=https://github.com/deneyapkart/deneyap_arduino_examples
+paragraph=*
+category=*
+url=*
 architectures=*
