--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,5 @@ maintainer=Turkish Technnology Team Foundation (T3)
 sentence=Arduino examples for Deneyap Development Boards
 paragraph=*
 category=*
-url=*
+url=https://github.com/deneyapkart/deneyap_arduino_examples
 architectures=*
